--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ body .blog_all-top-item2-top h3{
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
-	top: 268px;
+	top: 34%;
 	/* margin-top: 200px; */
 
 }
@@ -333,6 +333,7 @@ body .blog_all-top-item2-top h3{
 	gap: 40px;
 	align-items: center;
 	position: relative;
+	padding-bottom: 40px;
 }
 .header_card-bot-left-all {
 	display: flex;
@@ -932,7 +933,7 @@ width: 875px;
 		padding-left: 5px;
 	}
 	.header-nav {
-		top: 230px;
+		top: 23%;
 	}
 	.container {
 		margin-left: 30px;
@@ -1450,7 +1451,7 @@ width: 875px;
 
 }
 .humans-texts-rigth {
-	
+	text-align: right;
 }
 .humans-texts-rigth p{
 	font-size: 20px;
