--- a/style.css
+++ b/style.css
@@ -204,14 +204,27 @@ body .blog_all-top-item2-top h3{
 	max-width: 375px;
 	width: 100%;
 }
+.logo {
+	
+}
+.header_left {
+	
+}
 .header-nav {
-	position: sticky;
+
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
-	top: 34%;
+
 	/* margin-top: 200px; */
 
+}
+.stiky {
+	position: sticky;
+	top: 5%;
+	display: flex;
+	flex-direction: column;
+	gap: 180px;
 }
 .header-nav-link {
 	cursor: pointer;
@@ -963,6 +976,23 @@ width: 875px;
 	.main-left-overflow {
 		max-width: 368px;
 	}
+	.header_card-bot-rigth-svg-two {
+		width: 183px;
+		height: 53px!important;
+	}
+	.header_card-bot-rigth-svg-one {
+		width: 72px;
+		height: 54px!important;
+	}
+	.svg-abs-text {
+		font-size: 22px;
+		top: 11px;
+		left: 51px;
+	}
+	.svg-abs {
+		margin-top: 0px;
+	}
+ 
 }
 @media(max-width:1300px) {
 	.blog_all-top-item1 a {
@@ -1370,16 +1400,63 @@ width: 875px;
 	
 	clip-path: polygon(0 0, 100vw 0, 100vw 100%, 0 100%);
 }
+.mySwiper2 {
+	margin-top: 16px;
+}
 .swiper-slide-im {
 	display: block;
 	width: 853px!important;
 	height: 500px!important;
 	object-fit: cover;
+	margin-bottom: 40px!important;
+}
+.swiper-slide-im:hover {
+	transform: scale(1)!important;
+}
+.swiper-slide-thumb-active img{
+	border: 1px solid #FFFFFF;
+	border-radius: 10px;
+	opacity: 1;
 }
 
+.swiper-humans-two {
+	padding-bottom: 10px!important;
+}
 .swiper-slide-im2 {
-	width: 205px!important;
-	height: 115px!important;
+	margin-bottom: 0px!important;
+
+}
+.swiper-slide-im2 {
+	opacity: .4;
+	width: 128px!important;
+	height: 72px!important;
+}
+.swiper-humans-two-wrapper {
+	display: grid!important;
+	grid-template-columns: repeat(4, 128px)!important;
+	align-items: center;
+	justify-content: center;
+	gap: 15px;
+}
+
+.sw-buttons {
+	position: absolute;
+	bottom: 15px;
+	/* z-index: 10000; */
+	display: flex;
+	width: 100%;
+	right: 0;
+	justify-content: space-between;
+}
+.swiper-btn-next {
+	order: 2;
+	cursor: pointer;
+	z-index: 100;
+}
+.swiper-btn-prev {
+	order: 1;
+	z-index: 100;
+	cursor: pointer;
 }
 .humans-magazine {
 	padding-top: 90px;
@@ -1502,4 +1579,139 @@ width: 875px;
 .shag {
 	max-width: 210px!important;
 
+}
+
+@media(max-width:1440px) {
+	.humans-texts-left {
+		max-width: 550px;
+		font-size: 18px;
+	}
+	.swiper-slide-im {
+		width: 800px!important;
+		height: 400px!important;
+		margin-bottom: 30px!important;
+	}
+
+	.mySwiper2 {
+		margin-left: 0!important;
+		width: 95%;
+	}
+	.humans-magazine {
+		padding-top: 80px;
+		padding-bottom: 60px;
+	}
+}
+@media(max-width:1300px) {
+	.humans-texts-rigth-bot a {
+		font-size: 18px;
+
+	}
+	.humans-texts-left {
+		max-width: 500px;
+		font-size: 18px;
+	}
+
+}
+@media(max-width:1024px) {
+
+}
+@media(max-width:768px) {
+	.div-human {
+		flex-direction: column;
+	}
+	.humans-texts {
+		flex-direction: column;
+
+	}
+	.header_rigth {
+		width: 97vw;
+	}
+	.mySwiper2 {
+		margin-left: auto!important;
+		width: 100%;
+		/* display: none!important; */
+		padding-left: 0px!important;
+	}
+	.swiper-slide-im {
+		width: 728px!important;
+		height: 400px!important;
+		margin-bottom: 16px!important;
+	}
+	.header-top-Humans {
+		background-image: url(./img/hum2.png);
+		
+	}
+	.sw-buttons {
+		bottom: 9px;
+		width: 99%;
+	}
+	.swiper-humans-two-wrapper {
+		display: grid!important;
+		grid-template-columns: repeat(4, 105px)!important;
+		align-items: center;
+		justify-content: center;
+	}
+	
+	.swiper-slide-im2 {
+		width: 105px!important;
+    	height: 62px!important;
+	}	
+	.humans-texts-rigth {
+		margin-top: 60px;
+		
+		text-align: center;
+	}
+	.humans-texts-rigth-bot {
+		align-items: start;
+	}
+	.humans-texts-rigth-top {
+		position: relative;
+		margin-bottom: 24px;
+		padding: 20px;
+		background:url(./img/HumanFon3.jpg);
+		background-size: cover;
+		background-position: center;
+		
+		
+	}
+	.humans-texts-rigth p {
+		position: relative;
+		z-index: 10;
+	}
+	.humans-texts-rigth h2 {
+		position: relative;
+		z-index: 10;
+	}
+	.humans-texts-rigth img {
+		position: relative;
+		z-index: 10;
+	}
+	.humans-texts-rigth-top::after {
+			content: "";
+			display: block;    
+			width: 100%;
+			height: 100%;    
+			position: absolute;
+			top: 0;      
+			left: 0;   
+			background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%),
+			linear-gradient(89.99deg, #000000 12.89%, rgba(0, 0, 0, 0) 43.74%, #000000 74.03%);
+
+	}
+	.div {
+		margin-left: 0;
+		overflow: visible;
+	}
+	.humans-magazine {
+		flex-direction: column;
+		gap: 20px;
+	}
+	.humans-magazine-left {
+		flex-direction: column;
+		gap: 20px;
+	}
+	.container-hidden {
+		margin-left: 0;
+		padding-left: 16px;
+	}
 }
